--- a/pages/about/css/about.css
+++ b/pages/about/css/about.css
@@ -389,15 +389,15 @@ a {
 }
 
 .socials__link--first {
-  background: url(/images/socials/fb.png) no-repeat;
+  background: url("/images/socials/fb.png") no-repeat;
 }
 
 .socials__link--second {
-  background: url(/images/socials/tw.png) no-repeat 0 2px;
+  background: url("/images/socials/tw.png") no-repeat 0 2px;
 }
 
 .socials__link--third {
-  background: url(/images/socials/inst.png) no-repeat;
+  background: url("/images/socials/inst.png") no-repeat;
 }
 
 .footer {
