--- a/pages/news/css/news.css
+++ b/pages/news/css/news.css
@@ -136,6 +136,121 @@ a {
   color: #000;
 }
 
+.card {
+  position: relative;
+  padding: 50px 0 60px 40px;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+}
+
+.card:hover {
+  background: none;
+  background-color: #fff;
+  outline: 1px solid black;
+}
+
+.card:hover .card__info {
+  visibility: visible;
+}
+
+.card__info {
+  background-color: #fff;
+  visibility: hidden;
+}
+
+.card__category {
+  position: absolute;
+  top: 50px;
+  right: 32px;
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: .03em;
+  text-transform: uppercase;
+}
+
+.card__title {
+  border-bottom: 1px solid #000;
+  margin-bottom: 55px;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 20px;
+  letter-spacing: .03em;
+  text-transform: uppercase;
+}
+
+.card__title:first-line {
+  line-height: 30px;
+}
+
+.card__text {
+  max-width: 330px;
+  min-height: 130px;
+  margin-left: auto;
+  margin-right: 30px;
+  text-align: center;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 140%;
+}
+
+.card__link {
+  position: absolute;
+  bottom: 38px;
+  font-family: inherit;
+  font-weight: normal;
+  font-size: 18px;
+  color: #000;
+  -webkit-transition: .3s transform ease;
+  transition: .3s transform ease;
+}
+
+.card__link:hover {
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+  -webkit-transition: .3s transform ease;
+  transition: .3s transform ease;
+}
+
+.card__link::after {
+  content: url(/images/news/arrow.png);
+  padding-left: 10px;
+}
+
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.socials__link {
+  width: 20px;
+  height: 20px;
+  display: block;
+}
+
+.socials__link:hover {
+  opacity: .7;
+}
+
+.socials__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.socials__link--first {
+  background: url("/images/socials/fb.png") no-repeat;
+}
+
+.socials__link--second {
+  background: url("/images/socials/tw.png") no-repeat 0 2px;
+}
+
+.socials__link--third {
+  background: url("/images/socials/inst.png") no-repeat;
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -243,63 +358,76 @@ a {
   margin-right: 45px;
 }
 
-.news .news__card {
-  max-width: 600px;
-  min-height: 570px;
+.news .news__lower {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(570px, auto);
+  grid-gap: 60px;
+}
+
+.news .news__card:first-child {
+  background: url("../../../images/news/table.jpg") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:nth-child(2) {
+  background: url("../../../images/news/facade.jpg") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:nth-child(3) {
+  background: url("../../../images/news/hall.jpg ") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:nth-child(4) {
+  background: url("../../../images/news/houses.jpg ") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:nth-child(5) {
+  background: url("../../../images/news/bed.jpg") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:nth-child(6) {
+  background: url("../../../images/news/plant.jpg") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:nth-child(7) {
+  background: url("../../../images/news/yard.jpg") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:nth-child(8) {
+  background: url("../../../images/news/wood-interior.jpg") no-repeat;
+  background-size: cover;
+}
+
+.news .news__card:last-child {
+  background: url("../../../images/news/bedroom.jpg ") no-repeat;
+  background-size: cover;
 }
 
 .news .news__card:hover {
+  background: none;
   background-color: #f27935;
   -webkit-transition: .3s all ease;
   transition: .3s all ease;
 }
 
-.news .news__card:hover .news__card-pic {
-  background: none;
-  -webkit-transition: .3s all ease;
-  transition: .3s all ease;
-}
-
-.news .news__card:hover .news__card-info {
+.news .news__card:hover .card__info {
   visibility: visible;
 }
 
-.news .news__card-pic {
-  position: relative;
-  padding: 50px 0 33px 40px;
-  background: url("../../../images/exterior-1.jpg") no-repeat;
-  max-width: 600px;
-  min-height: 570px;
-  -webkit-transition: .3s all ease;
-  transition: .3s all ease;
-}
-
-.news .news__card-info {
-  background-color: #f27935;
+.news .card__info {
   visibility: hidden;
 }
 
-.news .news__category {
-  position: absolute;
-  top: 50px;
-  right: 32px;
-}
-
-.news .news__card-title {
-  border-bottom: 1px solid #000;
-  margin-bottom: 55px;
-}
-
-.news .news__card-text {
-  max-width: 330px;
-  min-height: 130px;
-  margin-left: auto;
-  margin-right: 30px;
-  text-align: center;
-}
-
-.news .news__card-link {
-  position: absolute;
-  bottom: 33px;
+.footer {
+  border-top: none;
 }
 /*# sourceMappingURL=news.css.map */
