--- a/pages/portfolio/css/portfolio.css
+++ b/pages/portfolio/css/portfolio.css
@@ -136,6 +136,86 @@ a {
   color: #000;
 }
 
+.card {
+  position: relative;
+  padding: 50px 0 60px 40px;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+}
+
+.card:hover {
+  background: none;
+  background-color: #fff;
+  outline: 1px solid black;
+}
+
+.card:hover .card__info {
+  visibility: visible;
+}
+
+.card__info {
+  background-color: #fff;
+  visibility: hidden;
+}
+
+.card__category {
+  position: absolute;
+  top: 50px;
+  right: 32px;
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: .03em;
+  text-transform: uppercase;
+}
+
+.card__title {
+  border-bottom: 1px solid #000;
+  margin-bottom: 55px;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 20px;
+  letter-spacing: .03em;
+  text-transform: uppercase;
+}
+
+.card__title:first-line {
+  line-height: 30px;
+}
+
+.card__text {
+  max-width: 330px;
+  min-height: 130px;
+  margin-left: auto;
+  margin-right: 30px;
+  text-align: center;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 140%;
+}
+
+.card__link {
+  position: absolute;
+  bottom: 38px;
+  font-family: inherit;
+  font-weight: normal;
+  font-size: 18px;
+  color: #000;
+  -webkit-transition: .3s transform ease;
+  transition: .3s transform ease;
+}
+
+.card__link:hover {
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+  -webkit-transition: .3s transform ease;
+  transition: .3s transform ease;
+}
+
+.card__link::after {
+  content: url(/images/news/arrow.png);
+  padding-left: 10px;
+}
+
 .socials {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -238,238 +318,155 @@ a {
   transition: .2s color ease;
 }
 
-.header .header__central {
+.header .header__lower {
   padding-top: 210px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .header .header__title {
-  margin-left: 410px;
-  font-family: SF Pro Display;
+  margin-left: 400px;
   font-weight: bold;
   font-size: 57px;
-  line-height: 40px;
+  line-height: 42px;
 }
 
-.header .header__central-decor-el {
-  width: 100%;
-  height: 75px;
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
+.projects .projects__nav {
+  padding-top: 70px;
+  padding-bottom: 55px;
 }
 
-.contacts {
-  padding-bottom: 200px;
-}
-
-.contacts .contacts__upper {
-  padding-top: 230px;
-}
-
-.contacts .contacts__title {
-  width: 600px;
-  border-bottom: 1px solid #000;
-  text-align: right;
-}
-
-.contacts .contacts__title {
-  font-family: SF Pro Display;
-  font-weight: bold;
-  font-size: 25px;
-  line-height: 20px;
-  text-transform: uppercase;
-}
-
-.contacts .contacts__lower {
+.projects .projects__menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.contacts .contacts__lower-left {
-  width: 50%;
-  padding-top: 130px;
+.projects .projects__menu-item {
+  text-transform: capitalize;
+  -webkit-transition: .2s color ease;
+  transition: .2s color ease;
 }
 
-.contacts .contacts__lower-right {
-  width: 50%;
-  padding-top: 120px;
-}
-
-.contacts .contacts__tel {
-  font-weight: bold;
-  font-size: 32px;
+.projects .projects__menu-item:hover {
   color: #f27935;
-  display: block;
-  margin-bottom: 120px;
+  cursor: pointer;
+  -webkit-transition: .2s color ease;
+  transition: .2s color ease;
 }
 
-.contacts .contacts__address {
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 140%;
-  margin-bottom: 70px;
+.projects .projects__menu-item:not(:last-child) {
+  margin-right: 45px;
 }
 
-.contacts .contacts__address-span {
-  color: #f27935;
+.projects .projects__lower {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(570px, auto);
+  grid-gap: 60px;
 }
 
-.contacts .contacts__email-container {
-  margin-bottom: 20px;
-}
-
-.contacts .contacts__email-text,
-.contacts .contacts__email-link {
-  font-family: inherit;
-  font-weight: regular;
-  font-size: 15px;
-  color: #000;
-  -webkit-transition: .1s color linear;
-  transition: .1s color linear;
-}
-
-.contacts .contacts__email-link:hover {
-  color: #f27935;
-  -webkit-transition: .1s color linear;
-  transition: .1s color linear;
-}
-
-.contacts .contacts__email-text {
-  font-weight: bold;
-}
-
-.contacts .contacts__socials-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.contacts .contacts__socials-text {
-  font-weight: 700;
-  font-size: 15px;
-  width: auto;
-}
-
-.contacts .contacts__socials-items-container {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  min-width: 100px;
-}
-
-.contacts .contacts__socials-link {
-  display: block;
-  width: 23px;
-  height: 28px;
-  margin-left: 18px;
-  -webkit-transition: .2s all ease;
-  transition: .2s all ease;
-}
-
-.contacts .contacts__socials-link:hover {
-  opacity: .7;
-  -webkit-transition: .2s opacity ease;
-  transition: .2s opacity ease;
-}
-
-.contacts .contacts__socials-link--first {
-  background: url("../../../images/contact/fb.png") no-repeat;
-  background-position: center 0;
-}
-
-.contacts .contacts__socials-link--second {
-  background: url("../../../images//contact/tw.png") no-repeat;
-}
-
-.contacts .contacts__socials-link--third {
-  background: url("../../../images/contact/pin.png") no-repeat;
-  margin-top: -2px;
-}
-
-.contacts .contacts__text {
-  font-weight: bold;
-  font-size: 38px;
-  line-height: 50px;
-  margin-bottom: 60px;
-}
-
-.contacts .contacts__text-span {
-  color: #f27935;
-}
-
-.contacts .contacts__input {
-  font-family: inherit;
-  letter-spacing: .05rem;
-}
-
-.contacts .contacts__input:not(.contacts__input--btn) {
-  border: 1px solid #000;
-  padding: 16px;
-  margin-bottom: 30px;
-  font-weight: normal;
-  font-size: 15px;
-  color: #7E7E7E;
-}
-
-.contacts .contacts__input:not(.contacts__input--btn):focus::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.contacts .contacts__input:not(.contacts__input--btn):focus:-ms-input-placeholder {
-  color: transparent;
-}
-
-.contacts .contacts__input:not(.contacts__input--btn):focus::-ms-input-placeholder {
-  color: transparent;
-}
-
-.contacts .contacts__input:not(.contacts__input--btn):focus::placeholder {
-  color: transparent;
-}
-
-.contacts .contacts__input--name,
-.contacts .contacts__input--email {
-  width: 260px;
-  height: 50px;
-  display: inline-block;
-}
-
-.contacts .contacts__input--name {
-  margin-right: 30px;
-}
-
-.contacts .contacts__input--textarea {
-  width: 100%;
-  min-height: 175px;
-  resize: none;
-  display: block;
-}
-
-.contacts .contacts__input--btn {
-  width: 230px;
-  height: 50px;
-  font-family: inherit;
-  text-transform: uppercase;
-  border: none;
-  outline: 1px solid #f27935;
-  background-color: #f27935;
-  font-weight: 600;
-  font-size: 13px;
-  padding: 16px;
-  color: #fff;
-  letter-spacing: .1rem;
-  -webkit-transition: .2s all ease;
-  transition: .2s all ease;
-}
-
-.contacts .contacts__input--btn:hover {
-  color: #f27935;
+.projects .projects__card {
   background-color: #fff;
-  -webkit-transition: .2s all ease;
-  transition: .2s all ease;
 }
 
-.contacts .contacts__input--btn:active {
-  color: #fff;
-  background-color: #f27935;
+.projects .projects__card-category {
+  color: #f27935;
 }
-/*# sourceMappingURL=contact.css.map */
+
+.projects .projects__card:first-child {
+  background: url("/images/portfolio/bedroom.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:nth-child(2) {
+  background: url("/images/portfolio/hall.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  -ms-grid-column: 3;
+  grid-column: 3 / 3;
+  background: url("/images/portfolio/yard.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:nth-child(4) {
+  -ms-grid-column: 1;
+  grid-column: 1 / 1;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / 4;
+  background: url("/images/portfolio/sofa.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:nth-child(5) {
+  background: url("/images/portfolio/houses.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:nth-child(6) {
+  background: url("/images/portfolio/white-houses.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:nth-child(7) {
+  background: url("/images/portfolio/building.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:nth-child(8) {
+  background: url("/images/portfolio/hall.jpg") no-repeat;
+  background-size: cover;
+}
+
+.projects .projects__card:last-child {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  -ms-grid-row: 4;
+  grid-row: 4 / 4;
+  background: url("/images/portfolio/divan.jpg") no-repeat 0 -230px;
+  background-size: cover;
+}
+
+.projects .card:hover {
+  background: none;
+  outline: 1px solid black;
+}
+
+.projects .projects__card:last-child:hover {
+  background-position: 0 -230px;
+}
+
+.projects .projects__card-link {
+  display: block;
+  width: 88px;
+  height: 88px;
+  background-color: #f27935;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.projects .projects__card-link::after {
+  content: url(/images/portfolio/arrow.png);
+  margin-left: -7px;
+}
+
+.footer {
+  border-top: none;
+}
+/*# sourceMappingURL=portfolio.css.map */
