Added carousel project for clients section. Changed scss/html in trends section.

--- a/common-blocks/services/_services.scss
+++ b/common-blocks/services/_services.scss
@@ -35,9 +35,9 @@
     width: 50%;
   }
 
-  .services__list {
+  // .services__list {
     // padding-top: 170px; // ? мб заменить на 1 значение
-  }
+  // }
 
   .services__list-item {
     max-width: 555px;
