--- a/pages/index/scss/index.scss
+++ b/pages/index/scss/index.scss
@@ -320,5 +320,267 @@
 
 .clients {
   padding-top: 200px;
+  padding-bottom: 200px;
+  position: relative;
 
+  // background-color: #f9f9f9;
+
+  .clients__title {
+    position: absolute;
+    left: 0;
+  }
+
+  .clients__upper {
+    display: flex;
+    justify-content: flex-end;
+    // align-items: flex-start;
+  }
+
+  .clients__title {
+    width: 730px;
+    border-bottom: 1px solid #000;
+    text-align: right;
+
+    @include font(700, 1.5rem);
+    line-height: 80%;
+    // letter-spacing: 0.em;
+  }
+
+  .clients__arrow-wrapper {
+    display: flex;
+  }
+
+  .clients__arrow--left {
+    margin-right: 35px;
+  }
+
+  .clients__arrow {
+    transition: 0.2s all ease;
+    cursor: pointer;
+  }
+
+  .clients__arrow:hover .clients__arrow-line {
+    stroke: #f27935;
+    transition: 0.2s all ease;
+  }
+
+  .clients__lower {
+    padding-top: 230px;
+  }
+
+  .clients__carousel {
+    display: flex;
+  }
+
+  .clients__lower--left,
+  .clients__lower--right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    // border: 1px solid #000;
+  }
+
+  .clients__pic {
+    width: 265px;
+    height: 265px;
+    border-radius: 50%;
+    background-color: #f8f8f8;
+    margin-bottom: 80px;
+    align-self: center;
+  }
+
+  .clients__name {
+    border-bottom: 1px solid #000;
+    width: 480px;
+    margin-bottom: 35px;
+    position: relative;
+
+    @include font(700, 1.5rem);
+    line-height: 80%;
+    letter-spacing: 0.03rem;
+    text-transform: uppercase;
+  }
+
+  .clients__name::after {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    content: url("../../../images/clients/q-marks.svg");
+    width: 37px;
+    height: 33px;
+  }
+
+  .clients__text {
+    max-width: 300px;
+    text-align: right;
+    @include font(400, 1rem);
+    line-height: 140%;
+  }
+}
+
+.news {
+  padding-top: 160px;
+  padding-bottom: 160px;
+  background-color: #f9f9f9;
+
+  .news__container {
+    display: flex;
+  }
+
+  .news__side {
+    width: 50%;
+
+    // border: 1px solid #000;
+  }
+
+  .news__side-left {
+    // flex-direction: column;
+    // justify-content: space-between;
+  }
+
+  .news__title {
+    margin-bottom: 200px;
+
+    @include font(600, 3.5rem);
+
+  }
+
+  .news__accordion-tab {
+    max-width: 485px;
+    // display: flex;
+    // flex-direction: column;
+  }
+
+  .news__accordion-tab-upper {
+    border-bottom: 1px solid #000;
+    @include flex(space-between, center);
+    padding-top: 7px;
+    padding-bottom: 7px;
+    cursor: pointer;
+  }
+
+  .news__accordion-title {
+    @include font(600, 1rem);
+    text-transform: uppercase;
+    letter-spacing: 0.03rem;
+    transition: 0.2s color ease;
+  }
+
+  .news__accordion-tab-upper:hover .news__accordion-title {
+    color: $accent-color;
+    transition: 0.2s color ease;
+  }
+
+  .news__accordion-tab-upper:hover .news__accordion-btn {
+    background-color: $accent-color;
+    transition: 0.2s all ease;
+    border: none;
+  }
+
+  .news__accordion-title {
+    text-transform: uppercase;
+  }
+
+  .news__accordion-btn {
+    @extend %centering-flex-container;
+    padding-left: 2px;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #000;
+    border-radius: 50%;
+
+    transition: 0.2s all ease;
+  }
+
+  .news__accordion-arrow {
+    display: block;
+  }
+
+  .news__accordion-arrow--active {
+    transform: rotate(90deg);
+  }
+
+  .news__accordion-tab-lower {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    // padding-top: 40px;
+    // padding-bottom: 40px;
+
+    // height: 145px;
+    // height: 0;
+    height: 0;
+
+    padding-top: 0;
+    padding-bottom: 0;
+    overflow: hidden;
+  }
+
+  .news__accordion-tab--slide-down {
+    animation: slide-down-accordion-tab-lower 0.5s forwards;
+  }
+
+  @keyframes slide-down-accordion-tab-lower {
+    0% {
+      height: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    100% {
+      height: 145px;
+      padding-top: 40px;
+      padding-bottom: 40px;
+    }
+  }
+
+  .news__accordion-tab--slide-up {
+    animation: slide-up-accordion-tab-lower 0.5s forwards;
+  }
+
+  @keyframes slide-up-accordion-tab-lower {
+    0% {
+      height: 145px;
+      padding-top: 40px;
+      padding-bottom: 40px;
+    }
+
+    100% {
+      height: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
+
+  .news__accordion-link {
+    color: $accent-color;
+    transition: 0.2s color ease;
+  }
+
+  .news__accordion-link:hover {
+    color: darken($accent-color, 10%);
+    transition: 0.2s color ease;
+  }
+
+  .news__acccordion-text {
+    max-width: 400px;
+    @include font(400, 1rem);
+    line-height: 140%;
+    height: 66px;
+    overflow: hidden;
+  }
+
+  .news__side--right {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .news__pic {
+    width: 485px;
+    height: 505px;
+
+    background-color: grey;
+  }
 }
